--- a/src/root/Root.css
+++ b/src/root/Root.css
@@ -62,9 +62,9 @@ a {
 :root {
   /* colors */
   --background-color: #262626;
-  --background-color-play: #e9e9e9;
+  --background-color-play: #b0b0b0;
   --background-color-icons: #ffffff;
-  --background-color-ui: #e7e7e7;
+  --background-color-ui: #b0b0b0;
   --background-color-detail: #d4d4d4;
   --background-color-info: #a0a0a0a6;
   --background-color-listitem: #a0a0a0;
@@ -165,8 +165,8 @@ a {
 [data-theme='light'] {
   --overlay-detail-color: #a29f8c;
   --background-color: #eeedec;
-  --background-color-play: #CCCCFF;
-  --background-color-ui: #CCCCFF;
+  --background-color-play: #b3b3ff;
+  --background-color-ui: #b3b3ff;
   --background-color-detail: #978f7e;
   --background-color-info: #777891a6;
   --background-color-listitem: #a5a6c6;
